[package]
name = "oracle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.17.0", default-features = false, features = ["ws-tokio"] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
futures = "0.3.5"
hex-literal = "0.3"